Finnish risotto.html q

--- a/risotto.html
+++ b/risotto.html
@@ -9,7 +9,7 @@
         <img src='./img/risotto.jpg' alt=' The final result of a risotto of zucchini and prawns' width='300'>
         <p>The broth should be homemade when making risotto, to ensure the most flavorful results, but if time or circumstances make having homemade broth impossible, use the best canned broth you can find. Chicken, vegetable, fish and meat broths are all used depending on the other ingredients used in the dish.</p>
         <p>You could substitute another vegetable for the zucchini if you prefer, but this combination is as pretty as it is flavorful. Asparagus is another vegetable that works particularly well with the shrimp, and still has the pink and green color combination. Try and find small, young zucchini for the best flavor.</p>
-        <h2>Ingredients</h2>
+        <h2>Ingredients for 2 people:</h2>
         <ul>
             <li>150g of rice</li>
             <li>750 mL of vegetable broth or water</li>
@@ -18,9 +18,21 @@
             <li>1/2 sliced zucchini</li>
             <li>10 prawns</li>
             <li>1 sp of grated Parmesan cheese</li>
+            <li>1 sp of sunflower oil</li>
             <li>2 saffron threads</li>
             <li>Salt and pepper</li>
             <li>Green onion (Optional)</li>
         </ul>
+        <h2>Steps:</h2>
+        <ol>
+            <li>In a pot, heat the oil and cook the onions and garlics for 5 minutes. Add a little bit of salt.</li>
+            <li>Add the zucchini and the prawns and cook for 5 minutes.</li>
+            <li>In the meanwhile, heat the broth in a pot or in the microwave.</li>
+            <li>Add the rice and cook it for 2 minutes. Add the saffron.</li>
+            <li>Add enough broth for covering the rice. It must be hot for not stopping the cooking.</li>
+            <li>The broth must be added slowly during 18 minutes or so.</li>
+            <li>Out of the fire, add the Parmesan cheese and mix.</li>
+            <li>Add salt and pepper and add a little bit of green onion above it.</li>
+        </ol>
     </body>
 </html>
