Fix the links in the main page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1><strong>Odin recipes</strong> by <em>Jake173</em></h1>
         <p>
             <ul>
-                <li><a href='./risotto.html'>Risotto of zucchini and prawns</a></li>
+                <li><a href='./risotto.html' target='_blank' rel='noopener noreferrer'>Risotto of zucchini and prawns</a></li>
             </ul>
         </p>
     </body>
