Fix risotto.html links

--- a/risotto.html
+++ b/risotto.html
@@ -34,7 +34,7 @@
             <li>Out of the fire, add the Parmesan cheese and mix.</li>
             <li>Add salt and pepper and add a little bit of green onion above it.</li>
         </ol>
-        <a href='#header'> Return to the top</a>
+        <a href='./risotto.html'> Return to the top</a>
         <a href='./index.html'>Main Menu</a>
     </body>
 </html>
